chore(rewrite): Spring Boot 2.7 → 3.5 migration via OpenRewrite