@@ -65,7 +65,7 @@ public class CacheServiceImpl implements CacheService {
         int unit = 1024;
         int exp = (int) (Math.log(bytes) / Math.log(unit));
         String pre = "KMGTPE".charAt(exp - 1) + "";
-        return String.format("%.2f %sB", bytes / Math.pow(unit, exp), pre);
+        return "%.2f %sB".formatted(bytes / Math.pow(unit, exp), pre);
     }
 
     @Override
